# sdl-pacman

./: CMakeLists.txt  map.txt  pacman.c  pacman.h  scoreboard.txt  sdl  sdl.c  sdl_new.c  sdl_old.c
